Fix alignment

--- a/src/DeltaBoard.Server/wwwroot/css/styles.css
+++ b/src/DeltaBoard.Server/wwwroot/css/styles.css
@@ -128,7 +128,7 @@ header {
 }
 
 .ready-count {
-    display: inline-block;
+    display: inline;
 }
 
 .ready-count .ready-number {
